--- a/package.json
+++ b/package.json
@@ -68,6 +68,7 @@
     "joi-password": "^2.0.3",
     "mongoose": "^6.1.7",
     "nest-winston": "^1.6.2",
+    "passport": "^0.5.2",
     "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
     "reflect-metadata": "^0.1.13",
@@ -110,7 +111,7 @@
     "eslint-config-prettier": "^8.3.0",
     "husky": "^7.0.0",
     "jest": "^27.4.7",
-    "jest-preset-angular": "11.0.0",
+    "jest-preset-angular": "^10.1.0",
     "lint-staged": "^12.3.1",
     "ng-packagr": "^13.0.0",
     "postcss": "^8.4.5",
