refactor: created ApiConfiguration

--- a/apps/api/.env.example
+++ b/apps/api/.env.example
@@ -13,11 +13,12 @@
 ##### API CONFIGURATION ################################################################################
 
 ### REQUIRED
-# API_TYPE='GraphQL'
-# API_INTEGRATION='Graphql-Prisma-Integration'
+API_TYPE='GraphQL'
+API_INTEGRATION='Graphql-Prisma-Integration'
+API_INTEGRATION_LABEL='GPI'
 
-API_TYPE='REST'
-API_INTEGRATION='Rest-Mongoose-Integration'
+# API_TYPE='REST'
+# API_INTEGRATION='Rest-Mongoose-Integration'
 
 
 
