refactor: cloned docker configs --> api-integration-rest-mongoose lib

--- a/libs/api/integration/graphql-prisma/project.json
+++ b/libs/api/integration/graphql-prisma/project.json
@@ -73,7 +73,7 @@
         "parallel": false,
         "cwd": "libs/api/config/docker/src",
         "commands": [
-          "docker-compose --project-name nest-api-{args.mode} --verbose --env-file ../../../../../apps/api/.env.{args.mode} -f ./{args.mode}/base.yaml -f ./{args.mode}/environment.yaml -f ./{args.mode}/volumes.yaml -f ./{args.mode}/ports.yaml -f ./{args.mode}/networks.yaml config > ../../../../../generated/docker/docker-compose-stack.{args.mode}.yaml"
+          "docker-compose --project-name gpi-{args.mode} --verbose --env-file ../../../../../apps/api/.env.{args.mode} -f ./{args.mode}/base.yaml -f ./{args.mode}/environment.yaml -f ./{args.mode}/volumes.yaml -f ./{args.mode}/ports.yaml -f ./{args.mode}/networks.yaml config > ../../../../../generated/docker/docker-compose-stack.{args.mode}.yaml"
         ]
       }
     },
@@ -82,7 +82,7 @@
       "options": {
         "parallel": false,
         "commands": [
-          "docker-compose --project-name nest-api-{args.mode} --verbose -f generated/docker/docker-compose-stack.{args.mode}.yaml up --build -d"
+          "docker-compose --project-name gpi-{args.mode} --verbose -f generated/docker/docker-compose-stack.{args.mode}.yaml up --build -d"
         ]
       }
     },
@@ -91,7 +91,7 @@
       "options": {
         "parallel": false,
         "commands": [
-          "docker-compose --project-name nest-api-{args.mode} --verbose -f generated/docker/docker-compose-stack.{args.mode}.yaml down --volumes --remove-orphans"
+          "docker-compose --project-name gpi-{args.mode} --verbose -f generated/docker/docker-compose-stack.{args.mode}.yaml down --volumes --remove-orphans"
         ]
       }
     },
