added docker config to api-integration-rest-mongoose

--- a/libs/api/integration/rest-mongoose/project.json
+++ b/libs/api/integration/rest-mongoose/project.json
@@ -33,9 +33,9 @@
       "executor": "@nrwl/workspace:run-commands",
       "options": {
         "parallel": false,
-        "cwd": "libs/api/config/docker/src",
+        "cwd": "libs/api/integration/rest-mongoose/src/lib/docker",
         "commands": [
-          "docker-compose --project-name rmi-{args.mode} --verbose --env-file ../../../../../apps/api/.env.{args.mode} -f ./{args.mode}/base.yaml -f ./{args.mode}/environment.yaml -f ./{args.mode}/volumes.yaml -f ./{args.mode}/ports.yaml -f ./{args.mode}/networks.yaml config > ../../../../../generated/docker/docker-compose-stack.{args.mode}.yaml"
+          "docker-compose --project-name rmi-{args.mode} --verbose --env-file ../../../../../../../apps/api/.env.{args.mode} -f ./{args.mode}/base.yaml -f ./{args.mode}/environment.yaml -f ./{args.mode}/volumes.yaml -f ./{args.mode}/ports.yaml -f ./{args.mode}/networks.yaml config > ../../../../../../../generated/docker/docker-compose-stack.{args.mode}.yaml"
         ]
       }
     },
