--- a/libs/api/integration/rest-mongoose/src/lib/docker/development/base.yaml
+++ b/libs/api/integration/rest-mongoose/src/lib/docker/development/base.yaml
@@ -1,8 +1,8 @@
 version: '2.4'
 services:
-  redis:
-    image: redis:alpine
-    container_name: redisdev
+  # redis:
+  #   image: redis:alpine
+  #   container_name: redisdev
 
   mongodb:
     image: mongo:4.4.11
