--- a/libs/api/integration/rest-mongoose/src/lib/docker/development/environment.yaml
+++ b/libs/api/integration/rest-mongoose/src/lib/docker/development/environment.yaml
@@ -1,8 +1,7 @@
 version: '2.4'
-services:
-
-  ### use it in production mode
-  # mongodb:
-  #   environment:
-  #     - MONGO_INITDB_ROOT_USERNAME=${MONGO_INITDB_ROOT_USERNAME} # MongoServerError command find requires authentication
-  #     - MONGO_INITDB_ROOT_PASSWORD=${MONGO_INITDB_ROOT_USERNAME} # MongoServerError command find requires authentication
+# services:
+### use it in production mode
+# mongodb:
+#   environment:
+#     - MONGO_INITDB_ROOT_USERNAME=${MONGO_INITDB_ROOT_USERNAME} # MongoServerError command find requires authentication
+#     - MONGO_INITDB_ROOT_PASSWORD=${MONGO_INITDB_ROOT_USERNAME} # MongoServerError command find requires authentication
