--- a/libs/api/integration/rest-mongoose/src/lib/docker/development/ports.yaml
+++ b/libs/api/integration/rest-mongoose/src/lib/docker/development/ports.yaml
@@ -1,8 +1,8 @@
 version: '2.4'
 services:
-  redis:
-    ports:
-      - ${REDIS_PORT}:6379
+  # redis:
+  #   ports:
+  #     - ${REDIS_PORT}:6379
 
   mongodb:
     ports:
