--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "private": true,
   "scripts": {
     "pre-commit": "lint-staged",
-    "pre-push": "lint-staged",
+    "pre-push": "npm run format:check",
     "nx": "nx",
     "build": "nx build",
     "test": "nx test",
@@ -79,6 +79,7 @@
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
+    "@wwwsolutions/my-plugin": "file:../wwwsolutions-plugins/dist/packages/my-plugin",
     "@angular-devkit/build-angular": "~13.1.0",
     "@angular-eslint/eslint-plugin": "~13.0.1",
     "@angular-eslint/eslint-plugin-template": "~13.0.1",
