--- a/package.json
+++ b/package.json
@@ -37,14 +37,14 @@
     "postinstall": "ngcc --properties es2015 browser module main"
   },
   "dependencies": {
-    "@angular/animations": "~13.1.0",
-    "@angular/common": "~13.1.0",
-    "@angular/compiler": "~13.1.0",
-    "@angular/core": "~13.1.0",
-    "@angular/forms": "~13.1.0",
-    "@angular/platform-browser": "~13.1.0",
-    "@angular/platform-browser-dynamic": "~13.1.0",
-    "@angular/router": "~13.1.0",
+    "@angular/animations": "13.2.1",
+    "@angular/common": "13.2.1",
+    "@angular/compiler": "13.2.1",
+    "@angular/core": "13.2.1",
+    "@angular/forms": "13.2.1",
+    "@angular/platform-browser": "13.2.1",
+    "@angular/platform-browser-dynamic": "13.2.1",
+    "@angular/router": "13.2.1",
     "@nestjs/common": "^8.2.0",
     "@nestjs/config": "^1.1.0",
     "@nestjs/core": "^8.2.0",
@@ -80,25 +80,25 @@
   },
   "devDependencies": {
     "@wwwsolutions/my-plugin": "file:../wwwsolutions-plugins/dist/packages/my-plugin",
-    "@angular-devkit/build-angular": "~13.1.0",
+    "@angular-devkit/build-angular": "13.2.2",
     "@angular-eslint/eslint-plugin": "~13.0.1",
     "@angular-eslint/eslint-plugin-template": "~13.0.1",
     "@angular-eslint/template-parser": "~13.0.1",
-    "@angular/cli": "^13.1.2",
-    "@angular/compiler-cli": "~13.1.0",
-    "@angular/language-service": "~13.1.0",
+    "@angular/cli": "13.2.2",
+    "@angular/compiler-cli": "13.2.1",
+    "@angular/language-service": "13.2.1",
     "@nestjs/schematics": "^8.0.4",
     "@nestjs/testing": "^8.2.0",
-    "@nrwl/angular": "13.5.2",
-    "@nrwl/cli": "13.5.2",
-    "@nrwl/eslint-plugin-nx": "13.5.2",
-    "@nrwl/jest": "13.5.2",
-    "@nrwl/js": "13.5.2",
-    "@nrwl/linter": "13.5.2",
-    "@nrwl/nest": "13.5.2",
-    "@nrwl/node": "13.5.2",
-    "@nrwl/tao": "13.5.2",
-    "@nrwl/workspace": "13.5.2",
+    "@nrwl/angular": "13.7.2",
+    "@nrwl/cli": "13.7.2",
+    "@nrwl/eslint-plugin-nx": "13.7.2",
+    "@nrwl/jest": "13.7.2",
+    "@nrwl/js": "13.7.2",
+    "@nrwl/linter": "13.7.2",
+    "@nrwl/nest": "13.7.2",
+    "@nrwl/node": "13.7.2",
+    "@nrwl/tao": "13.7.2",
+    "@nrwl/workspace": "13.7.2",
     "@openapitools/openapi-generator-cli": "^2.4.25",
     "@prisma/client": "^3.8.0",
     "@types/bcryptjs": "^2.4.2",
@@ -106,15 +106,15 @@
     "@types/node": "^17.0.10",
     "@types/passport-jwt": "^3.0.6",
     "@types/passport-local": "^1.0.34",
-    "@typescript-eslint/eslint-plugin": "^5.10.0",
-    "@typescript-eslint/parser": "~5.3.0",
-    "eslint": "^8.7.0",
+    "@typescript-eslint/eslint-plugin": "5.10.2",
+    "@typescript-eslint/parser": "5.10.2",
+    "eslint": "8.7.0",
     "eslint-config-prettier": "^8.3.0",
     "husky": "^7.0.0",
     "jest": "^27.4.7",
     "jest-preset-angular": "^10.1.0",
     "lint-staged": "^12.3.1",
-    "ng-packagr": "^13.0.0",
+    "ng-packagr": "13.2.1",
     "postcss": "^8.4.5",
     "postcss-import": "^14.0.2",
     "postcss-preset-env": "^6.7.0",
@@ -124,7 +124,7 @@
     "prisma-nestjs-graphql": "^14.6.1",
     "ts-jest": "^27.1.3",
     "ts-node": "^10.4.0",
-    "typescript": "^4.5.5"
+    "typescript": "4.5.5"
   },
   "lint-staged": {
     "*.{js,json,md,ts}": [
