--- a/apps/api/.env.development
+++ b/apps/api/.env.development
@@ -19,6 +19,7 @@ API_INTEGRATION_LABEL='GPI'
 
 # API_TYPE='REST'
 # API_INTEGRATION='Rest-Mongoose-Integration'
+# API_INTEGRATION_LABEL='RMI'
 
 
 
