--- a/package.json
+++ b/package.json
@@ -88,16 +88,16 @@
     "@angular/language-service": "13.2.1",
     "@nestjs/schematics": "^8.0.4",
     "@nestjs/testing": "^8.2.0",
-    "@nrwl/angular": "13.7.2",
-    "@nrwl/cli": "13.7.2",
-    "@nrwl/eslint-plugin-nx": "13.7.2",
-    "@nrwl/jest": "13.7.2",
-    "@nrwl/js": "13.7.2",
-    "@nrwl/linter": "13.7.2",
-    "@nrwl/nest": "13.7.2",
-    "@nrwl/node": "13.7.2",
-    "@nrwl/tao": "13.7.2",
-    "@nrwl/workspace": "13.7.2",
+    "@nrwl/angular": "13.8.3",
+    "@nrwl/cli": "13.8.3",
+    "@nrwl/eslint-plugin-nx": "13.8.3",
+    "@nrwl/jest": "13.8.3",
+    "@nrwl/js": "13.8.3",
+    "@nrwl/linter": "13.8.3",
+    "@nrwl/nest": "13.8.3",
+    "@nrwl/node": "13.8.3",
+    "@nrwl/tao": "13.8.3",
+    "@nrwl/workspace": "13.8.3",
     "@openapitools/openapi-generator-cli": "^2.4.26",
     "@prisma/client": "^3.9.1",
     "@types/bcryptjs": "^2.4.2",
@@ -107,12 +107,11 @@
     "@types/passport-local": "^1.0.34",
     "@typescript-eslint/eslint-plugin": "5.10.2",
     "@typescript-eslint/parser": "5.10.2",
-    "@wwwsolutions/my-plugin": "file:../wwwsolutions-plugins/dist/packages/my-plugin",
     "eslint": "8.7.0",
     "eslint-config-prettier": "^8.3.0",
     "husky": "^7.0.0",
     "jest": "^27.4.7",
-    "jest-preset-angular": "^10.1.0",
+    "jest-preset-angular": "11.1.1",
     "lint-staged": "^12.3.3",
     "ng-packagr": "13.2.1",
     "postcss": "^8.4.6",
