--- a/package.json
+++ b/package.json
@@ -51,8 +51,8 @@
     "@nestjs/passport": "^8.2.1",
     "@nestjs/platform-express": "^8.3.1",
     "@nestjs/swagger": "^5.2.0",
-    "apollo-server-core": "^3.6.2",
-    "apollo-server-express": "^3.6.2",
+    "apollo-server-core": "^3.6.3",
+    "apollo-server-express": "^3.6.3",
     "bcryptjs": "^2.4.3",
     "chalk": "4.1.2",
     "class-transformer": "^0.4.0",
@@ -63,7 +63,7 @@
     "graphql-type-json": "^0.3.2",
     "joi": "^17.6.0",
     "joi-password": "^2.0.3",
-    "mongoose": "^6.2.0",
+    "mongoose": "^6.2.3",
     "nest-winston": "^1.6.2",
     "passport": "^0.5.2",
     "passport-jwt": "^4.0.0",
@@ -72,7 +72,7 @@
     "rxjs": "^7.5.2",
     "swagger-ui-express": "^4.3.0",
     "tslib": "^2.0.0",
-    "winston": "^3.5.1",
+    "winston": "^3.6.0",
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
@@ -99,30 +99,30 @@
     "@nrwl/tao": "13.8.3",
     "@nrwl/workspace": "13.8.3",
     "@openapitools/openapi-generator-cli": "^2.4.26",
-    "@prisma/client": "^3.9.1",
+    "@prisma/client": "^3.9.2",
     "@types/bcryptjs": "^2.4.2",
     "@types/jest": "^27.4.0",
-    "@types/node": "^17.0.14",
+    "@types/node": "^17.0.19",
     "@types/passport-jwt": "^3.0.6",
     "@types/passport-local": "^1.0.34",
-    "@typescript-eslint/eslint-plugin": "5.10.2",
-    "@typescript-eslint/parser": "5.10.2",
+    "@typescript-eslint/eslint-plugin": "^5.10.2",
+    "@typescript-eslint/parser": "^5.10.2",
     "eslint": "8.7.0",
-    "eslint-config-prettier": "^8.3.0",
+    "eslint-config-prettier": "^8.4.0",
     "husky": "^7.0.0",
-    "jest": "^27.4.7",
+    "jest": "^27.5.1",
     "jest-preset-angular": "11.1.1",
-    "lint-staged": "^12.3.3",
+    "lint-staged": "^12.3.4",
     "ng-packagr": "13.2.1",
     "postcss": "^8.4.6",
     "postcss-import": "^14.0.2",
-    "postcss-preset-env": "^6.7.0",
+    "postcss-preset-env": "^6.7.1",
     "postcss-url": "^10.1.1",
     "prettier": "2.5.1",
-    "prisma": "^3.9.1",
-    "prisma-nestjs-graphql": "^14.6.1",
+    "prisma": "^3.9.2",
+    "prisma-nestjs-graphql": "^14.6.2",
     "ts-jest": "^27.1.3",
-    "ts-node": "^10.4.0",
+    "ts-node": "^10.5.0",
     "typescript": "4.5.5"
   },
   "lint-staged": {
