--- a/package.json
+++ b/package.json
@@ -88,20 +88,20 @@
     "@nestjs/core": "^8.3.1",
     "@nestjs/schematics": "^8.0.6",
     "@nestjs/testing": "^8.3.1",
-    "@nrwl/angular": "13.10.2",
-    "@nrwl/cli": "13.10.2",
-    "@nrwl/eslint-plugin-nx": "13.10.2",
-    "@nrwl/jest": "13.10.2",
-    "@nrwl/js": "13.10.2",
-    "@nrwl/linter": "13.10.2",
-    "@nrwl/nest": "13.10.2",
-    "@nrwl/node": "13.10.2",
+    "@nrwl/angular": "14.0.5",
+    "@nrwl/cli": "14.0.5",
+    "@nrwl/eslint-plugin-nx": "14.0.5",
+    "@nrwl/jest": "14.0.5",
+    "@nrwl/js": "14.0.5",
+    "@nrwl/linter": "14.0.5",
+    "@nrwl/nest": "14.0.5",
+    "@nrwl/node": "14.0.5",
     "@nrwl/tao": "13.8.3",
-    "@nrwl/workspace": "13.10.2",
+    "@nrwl/workspace": "14.0.5",
     "@openapitools/openapi-generator-cli": "^2.4.26",
     "@prisma/client": "^3.9.2",
     "@types/bcryptjs": "^2.4.2",
-    "@types/jest": "^27.4.0",
+    "@types/jest": "27.4.1",
     "@types/node": "^17.0.19",
     "@types/passport-jwt": "^3.0.6",
     "@types/passport-local": "^1.0.34",
@@ -110,7 +110,7 @@
     "eslint": "8.12.0",
     "eslint-config-prettier": "^8.4.0",
     "husky": "^7.0.0",
-    "jest": "^27.5.1",
+    "jest": "27.5.1",
     "jest-preset-angular": "11.1.1",
     "lint-staged": "^12.3.4",
     "ng-packagr": "13.3.1",
@@ -121,7 +121,7 @@
     "prettier": "2.5.1",
     "prisma": "^3.9.2",
     "prisma-nestjs-graphql": "^14.6.2",
-    "ts-jest": "^27.1.3",
+    "ts-jest": "27.1.4",
     "ts-node": "^10.5.0",
     "typescript": "4.6.3"
   },
