--- a/apps/api/project.json
+++ b/apps/api/project.json
@@ -1,5 +1,4 @@
 {
-  "root": "apps/api",
   "sourceRoot": "apps/api/src",
   "projectType": "application",
   "targets": {
@@ -65,7 +64,7 @@
       "executor": "@nrwl/jest:jest",
       "outputs": ["coverage/apps/api"],
       "options": {
-        "jestConfig": "apps/api/jest.config.js",
+        "jestConfig": "apps/api/jest.config.ts",
         "passWithNoTests": true
       }
     },
