--- a/libs/api/domain/authentication/data-access/project.json
+++ b/libs/api/domain/authentication/data-access/project.json
@@ -1,5 +1,4 @@
 {
-  "root": "libs/api/domain/authentication/data-access",
   "sourceRoot": "libs/api/domain/authentication/data-access/src",
   "projectType": "library",
   "targets": {
@@ -27,7 +26,7 @@
       "executor": "@nrwl/jest:jest",
       "outputs": ["coverage/libs/api/domain/authentication/data-access"],
       "options": {
-        "jestConfig": "libs/api/domain/authentication/data-access/jest.config.js",
+        "jestConfig": "libs/api/domain/authentication/data-access/jest.config.ts",
         "passWithNoTests": true
       }
     }
