--- a/libs/api/integration/graphql-prisma-postgres/feature/project.json
+++ b/libs/api/integration/graphql-prisma-postgres/feature/project.json
@@ -1,5 +1,4 @@
 {
-  "root": "libs/api/integration/graphql-prisma-postgres/feature",
   "sourceRoot": "libs/api/integration/graphql-prisma-postgres/feature/src",
   "projectType": "library",
   "targets": {
@@ -29,7 +28,7 @@
         "coverage/libs/api/integration/graphql-prisma-postgres/feature"
       ],
       "options": {
-        "jestConfig": "libs/api/integration/graphql-prisma-postgres/feature/jest.config.js",
+        "jestConfig": "libs/api/integration/graphql-prisma-postgres/feature/jest.config.ts",
         "passWithNoTests": true
       }
     }
