--- a/package.json
+++ b/package.json
@@ -88,16 +88,16 @@
     "@nestjs/core": "^8.3.1",
     "@nestjs/schematics": "^8.0.6",
     "@nestjs/testing": "^8.3.1",
-    "@nrwl/angular": "14.1.7",
-    "@nrwl/cli": "14.1.7",
-    "@nrwl/eslint-plugin-nx": "14.1.7",
-    "@nrwl/jest": "14.1.7",
-    "@nrwl/js": "14.1.7",
-    "@nrwl/linter": "14.1.7",
-    "@nrwl/nest": "14.1.7",
-    "@nrwl/node": "14.1.7",
-    "@nrwl/tao": "14.1.7",
-    "@nrwl/workspace": "14.1.7",
+    "@nrwl/angular": "14.1.9",
+    "@nrwl/cli": "14.1.9",
+    "@nrwl/eslint-plugin-nx": "14.1.9",
+    "@nrwl/jest": "14.1.9",
+    "@nrwl/js": "14.1.9",
+    "@nrwl/linter": "14.1.9",
+    "@nrwl/nest": "14.1.9",
+    "@nrwl/node": "14.1.9",
+    "@nrwl/tao": "14.1.9",
+    "@nrwl/workspace": "14.1.9",
     "@openapitools/openapi-generator-cli": "^2.4.26",
     "@prisma/client": "^3.9.2",
     "@types/bcryptjs": "^2.4.2",
@@ -115,9 +115,9 @@
     "lint-staged": "^12.3.4",
     "ng-packagr": "13.3.1",
     "postcss": "^8.4.6",
-    "postcss-import": "^14.0.2",
-    "postcss-preset-env": "^6.7.1",
-    "postcss-url": "^10.1.1",
+    "postcss-import": "14.1.0",
+    "postcss-preset-env": "7.5.0",
+    "postcss-url": "10.1.3",
     "prettier": "2.5.1",
     "prisma": "^3.9.2",
     "prisma-nestjs-graphql": "^14.6.2",
