--- a/libs/api/integration/graphql-prisma-postgres/feature/project.json
+++ b/libs/api/integration/graphql-prisma-postgres/feature/project.json
@@ -1,4 +1,5 @@
 {
+  "$schema": "..\\..\\..\\..\\..\\node_modules\\nx\\schemas\\project-schema.json",
   "sourceRoot": "libs/api/integration/graphql-prisma-postgres/feature/src",
   "projectType": "library",
   "targets": {
