--- a/package.json
+++ b/package.json
@@ -77,9 +77,9 @@
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "14.0.1",
-    "@angular-eslint/eslint-plugin": "13.2.1",
-    "@angular-eslint/eslint-plugin-template": "13.2.1",
-    "@angular-eslint/template-parser": "13.2.1",
+    "@angular-eslint/eslint-plugin": "14.0.0",
+    "@angular-eslint/eslint-plugin-template": "14.0.0",
+    "@angular-eslint/template-parser": "14.0.0",
     "@angular/cli": "~14.0.0",
     "@angular/compiler-cli": "14.0.1",
     "@angular/language-service": "14.0.1",
@@ -88,21 +88,21 @@
     "@nestjs/core": "^8.3.1",
     "@nestjs/schematics": "^8.0.6",
     "@nestjs/testing": "^8.3.1",
-    "@nrwl/angular": "14.3.6",
-    "@nrwl/cli": "14.3.6",
-    "@nrwl/eslint-plugin-nx": "14.3.6",
-    "@nrwl/jest": "14.3.6",
-    "@nrwl/js": "14.3.6",
-    "@nrwl/linter": "14.3.6",
-    "@nrwl/nest": "14.3.6",
-    "@nrwl/node": "14.3.6",
-    "@nrwl/tao": "14.3.6",
-    "@nrwl/workspace": "14.3.6",
+    "@nrwl/angular": "14.4.0",
+    "@nrwl/cli": "14.4.0",
+    "@nrwl/eslint-plugin-nx": "14.4.0",
+    "@nrwl/jest": "14.4.0",
+    "@nrwl/js": "14.4.0",
+    "@nrwl/linter": "14.4.0",
+    "@nrwl/nest": "14.4.0",
+    "@nrwl/node": "14.4.0",
+    "@nrwl/tao": "14.4.0",
+    "@nrwl/workspace": "14.4.0",
     "@openapitools/openapi-generator-cli": "^2.4.26",
     "@prisma/client": "^3.9.2",
     "@types/bcryptjs": "^2.4.2",
     "@types/jest": "27.4.1",
-    "@types/node": "^17.0.19",
+    "@types/node": "18.0.0",
     "@types/passport-jwt": "^3.0.6",
     "@types/passport-local": "^1.0.34",
     "@typescript-eslint/eslint-plugin": "5.24.0",
