--- a/package.json
+++ b/package.json
@@ -80,7 +80,7 @@
     "@angular-eslint/eslint-plugin": "14.0.2",
     "@angular-eslint/eslint-plugin-template": "14.0.2",
     "@angular-eslint/template-parser": "14.0.2",
-    "@angular/cli": "~14.1.0",
+    "@angular/cli": "~14.2.0",
     "@angular/compiler-cli": "14.2.0",
     "@angular/language-service": "14.2.0",
     "@nestjs/common": "9.0.0",
@@ -111,6 +111,7 @@
     "eslint-config-prettier": "^8.4.0",
     "husky": "^7.0.0",
     "jest": "28.1.3",
+    "jest-environment-jsdom": "28.1.1",
     "jest-preset-angular": "12.2.2",
     "lint-staged": "^12.3.4",
     "ng-packagr": "14.2.0",
